samba: fix samba36 build Set this lines in yours config if you want to use samba 3.6 CONFIG_FIRMWARE_INCLUDE_SMBD=y CONFIG_FIRMWARE_INCLUDE_SMBD36=y
First line enables samba in the firmware. Next line enables samba 3.6 instead if samba 3

--- a/trunk/user/Makefile
+++ b/trunk/user/Makefile
@@ -64,7 +64,7 @@ endif
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_NTFS_3G),y)
 FS_NTFS_ENABLED=y
 endif
-ifneq (,$(filter y,$(CONFIG_FIRMWARE_INCLUDE_SMBD) $(CONFIG_FIRMWARE_INCLUDE_SMBD36)))
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_SMBD),y)
 SAMBA_ENABLED=y
 endif
 endif
