samba36: review samba modules to decrease size Thx to wive-mt project

--- a/trunk/user/samba36/Makefile
+++ b/trunk/user/samba36/Makefile
@@ -135,7 +135,8 @@ configure:
 		--disable-external-libtevent \
 		--with-included-iniparser \
 		--with-included-popt \
-		--with-static-modules=pdb_tdbsam,pdb_wbc_sam,idmap_nss,nss_info_template,auth_winbind,auth_wbc,auth_domain; \
+		--with-static-modules=nss_info_template,idmap_nss \
+		--with-shared-modules=pdb_tdbsam,pdb_wbc_sam,auth_winbind,auth_wbc,auth_domain; \
 	)
 
 clean:
