--- a/trunk/linux-3.4.x/drivers/usb/Kconfig
+++ b/trunk/linux-3.4.x/drivers/usb/Kconfig
@@ -126,6 +126,8 @@ config USB
 
 source "drivers/usb/core/Kconfig"
 
+source "drivers/usb/dwc2/Kconfig"
+
 source "drivers/usb/dwc3/Kconfig"
 
 source "drivers/usb/mon/Kconfig"
