firmware: add support for TPLINK Archer MR200 v1

--- a/trunk/user/scripts/Makefile
+++ b/trunk/user/scripts/Makefile
@@ -1,3 +1,4 @@
+include $(ROOTDIR)/user/shared/board.mk
 
 all:
 
@@ -14,6 +15,11 @@ endif
 ifdef CONFIG_BLK_DEV_SD
 	$(ROMFSINST) /sbin/hddtune.sh
 	$(ROMFSINST) /sbin/spindown.sh
+endif
+	# FIXME:
+ifneq (,$(filter -DBOARD_ARCHER_MR200,$(CFLAGS)))
+	echo "\nadb wait-for-device\nadb shell chmod +x /WEBSERVER/www/cgi-bin/*\nadb shell httpd -h /WEBSERVER/www/" >> $(INSTALLDIR)/sbin/dev_init.sh ;\
+	echo "echo \"2357 000d\" > /sys/bus/usb-serial/drivers/option1/new_id\nsleep 2\nadb kill-server\n" >> $(INSTALLDIR)/sbin/dev_init.sh
 endif
 	$(ROMFSINST) /etc_ro/ld.so.conf
 	$(ROMFSINST) /etc_ro/protocols
