uboot: add ability to select internal httpd server

--- a/uboot/mips/uboot-5.x.x.x/config.in
+++ b/uboot/mips/uboot-5.x.x.x/config.in
@@ -1675,7 +1675,10 @@ fi
 
 fi
 ##################################################################################################
+comment ""
+bool 'HTTPD server'		HTTPD_SUPPORT		n
 
+##################################################################################################
 comment "GPIO pins (-1 mean unused)"
 
 int  'BTN Reset GPIO'		GPIO_BTN_RESET		-1
