--- a/trunk/configs/boards/YOUHUA/WR1200JS/kernel-3.4.x.config
+++ b/trunk/configs/boards/YOUHUA/WR1200JS/kernel-3.4.x.config
@@ -52,7 +52,7 @@ CONFIG_MT7621_ASIC=y
 CONFIG_PCIE_PORT0=y
 CONFIG_PCIE_PORT1=y
 # CONFIG_PCIE_PORT2 is not set
-CONFIG_PCIE_PERST_ONLY=y
+# CONFIG_PCIE_PERST_ONLY is not set
 # CONFIG_RALINK_MT7621_PLL900 is not set
 # CONFIG_RALINK_SYSTICK_COUNTER is not set
 # CONFIG_RALINK_CPUSLEEP is not set
@@ -535,7 +535,7 @@ CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
 # CONFIG_NETFILTER_XT_MATCH_DEVGROUP is not set
 CONFIG_NETFILTER_XT_MATCH_DSCP=m
 # CONFIG_NETFILTER_XT_MATCH_ECN is not set
-CONFIG_NETFILTER_XT_MATCH_ESP=y
+CONFIG_NETFILTER_XT_MATCH_ESP=m
 # CONFIG_NETFILTER_XT_MATCH_HASHLIMIT is not set
 # CONFIG_NETFILTER_XT_MATCH_HELPER is not set
 CONFIG_NETFILTER_XT_MATCH_HL=m
@@ -871,13 +871,14 @@ CONFIG_RT2880_MTD_PHYSMAP_BUSWIDTH=2
 # CONFIG_RT2880_ROOTFS_IN_RAM is not set
 CONFIG_RT2880_ROOTFS_IN_FLASH=y
 CONFIG_ROOTFS_IN_FLASH_NO_PADDING=y
-CONFIG_MTD_STORE_PART_SIZ=0x40000
+CONFIG_MTD_STORE_PART_SIZ=0x80000
 # CONFIG_PARPORT is not set
 CONFIG_BLK_DEV=y
 # CONFIG_BLK_DEV_PCIESSD_MTIP32XX is not set
 # CONFIG_BLK_CPQ_DA is not set
 # CONFIG_BLK_CPQ_CISS_DA is not set
 # CONFIG_BLK_DEV_DAC960 is not set
+# CONFIG_BLK_DEV_UMEM is not set
 # CONFIG_BLK_DEV_COW_COMMON is not set
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=8
@@ -1093,8 +1094,8 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_SERIAL_NONSTANDARD is not set
 # CONFIG_TRACE_SINK is not set
 CONFIG_RALINK_GPIO=y
-CONFIG_RALINK_GPIOMODE_JTAG=y
-# CONFIG_RALINK_GPIOMODE_I2C is not set
+# CONFIG_RALINK_GPIOMODE_JTAG is not set
+CONFIG_RALINK_GPIOMODE_I2C=y
 CONFIG_RALINK_GPIO_IRQ=y
 CONFIG_RALINK_GPIO_LED=y
 CONFIG_RALINK_GPIO_LED_USB=y
@@ -1637,8 +1638,7 @@ CONFIG_EXFAT_DISCARD=y
 # CONFIG_EXFAT_DEBUG_MSG is not set
 CONFIG_EXFAT_DEFAULT_CODEPAGE=866
 CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
-CONFIG_UFSD_FS=m
-CONFIG_UFSD_USE_NLS=y
+# CONFIG_UFSD_FS is not set
 # CONFIG_NTFS_FS is not set
 
 #
@@ -1663,9 +1663,9 @@ CONFIG_SQUASHFS=y
 # CONFIG_SQUASHFS_ZLIB is not set
 # CONFIG_SQUASHFS_LZO is not set
 CONFIG_SQUASHFS_XZ=y
-# CONFIG_SQUASHFS_4K_DEVBLK_SIZE is not set
+CONFIG_SQUASHFS_4K_DEVBLK_SIZE=y
 CONFIG_SQUASHFS_EMBEDDED=y
-CONFIG_SQUASHFS_FRAGMENT_CACHE_SIZE=5
+CONFIG_SQUASHFS_FRAGMENT_CACHE_SIZE=10
 # CONFIG_VXFS_FS is not set
 # CONFIG_MINIX_FS is not set
 # CONFIG_MINIX_FS_NATIVE_ENDIAN is not set
@@ -1874,7 +1874,7 @@ CONFIG_CRYPTO_DES=y
 #
 CONFIG_CRYPTO_DEFLATE=m
 # CONFIG_CRYPTO_ZLIB is not set
-# CONFIG_CRYPTO_LZO is not set
+CONFIG_CRYPTO_LZO=m
 
 #
 # Random Number Generation
@@ -1907,8 +1907,8 @@ CONFIG_CRC32_SARWATE=y
 # CONFIG_CRC8 is not set
 # CONFIG_ZLIB_INFLATE is not set
 # CONFIG_ZLIB_DEFLATE is not set
-# CONFIG_LZO_COMPRESS is not set
-# CONFIG_LZO_DECOMPRESS is not set
+CONFIG_LZO_COMPRESS=m
+CONFIG_LZO_DECOMPRESS=m
 CONFIG_XZ_DEC=y
 # CONFIG_XZ_DEC_X86 is not set
 # CONFIG_XZ_DEC_POWERPC is not set
@@ -2090,8 +2090,8 @@ CONFIG_MT76X3_AP_SMART_CARRIER_SENSE=y
 #
 # Wireless drivers common configs
 #
-CONFIG_RT_SINGLE_SKU=y
-CONFIG_RT_MAX_CLIENTS=48
+# CONFIG_RT_SINGLE_SKU is not set
+CONFIG_RT_MAX_CLIENTS=40
 # CONFIG_RT_BAND_STEERING is not set
 # CONFIG_RT_DOT11R_FT is not set
 # CONFIG_RT_DOT11K_RRM is not set
