--- a/trunk/configs/templates/youhua/wr1200js.config
+++ b/trunk/configs/templates/youhua/wr1200js.config
@@ -38,7 +38,7 @@ CONFIG_FIRMWARE_ENABLE_USB=y
 CONFIG_FIRMWARE_ENABLE_FAT=y
 
 ### Enable exFAT (FAT/FAT32 too) filesystem support. ~0.12MB
-#CONFIG_FIRMWARE_ENABLE_EXFAT=y
+CONFIG_FIRMWARE_ENABLE_EXFAT=y
 
 ### Enable EXT2 filesystem support. ~0.1MB
 #CONFIG_FIRMWARE_ENABLE_EXT2=y
