sstrip: update to 3.1

--- a/trunk/tools/sstrip/Makefile
+++ b/trunk/tools/sstrip/Makefile
@@ -1,7 +1,12 @@
 #  Makefile for sstrip
 
-sstrip: sstrip.c
-	gcc -ggdb -Wall -W -o sstrip sstrip.c
+CC = gcc
+CFLAGS = -Wall -Wextra -I  ./elfrw
+
+sstrip: sstrip.c ./elfrw/libelfrw.a
+./elfrw/libelfrw.a:
+	$(MAKE) -C ./elfrw libelfrw.a
 
 clean:
+	for dir in elfrw ; do $(MAKE) -C$$dir clean ; done
 	rm -f sstrip
