samba: refactor samba36 enable logic

--- a/trunk/user/Makefile
+++ b/trunk/user/Makefile
@@ -64,7 +64,7 @@ endif
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_NTFS_3G),y)
 FS_NTFS_ENABLED=y
 endif
-ifeq ($(CONFIG_FIRMWARE_INCLUDE_SMBD),y)
+ifneq (,$(filter y,$(CONFIG_FIRMWARE_INCLUDE_SMBD) $(CONFIG_FIRMWARE_INCLUDE_SMBD36)))
 SAMBA_ENABLED=y
 endif
 endif
