--- a/trunk/user/libdisk/Makefile
+++ b/trunk/user/libdisk/Makefile
@@ -28,7 +28,7 @@ test_share: test_share.o libdisk.so
 
 romfs:
 	$(ROMFSINST) /lib/libdisk.so
-	if [ "$(CONFIG_FIRMWARE_INCLUDE_SMBD)" = "y" ] || [ "$(CONFIG_FIRMWARE_INCLUDE_FTPD)" = "y" ] ; then \
+	if [ "$(CONFIG_FIRMWARE_INCLUDE_SMBD)" = "y" ] || [ "$(CONFIG_FIRMWARE_INCLUDE_SMBD36)" = "y" ] || [ "$(CONFIG_FIRMWARE_INCLUDE_FTPD)" = "y" ] ; then \
 		$(ROMFSINST) /sbin/test_share ; \
 	fi;
 
