--- a/trunk/user/rc/Makefile
+++ b/trunk/user/rc/Makefile
@@ -143,7 +143,7 @@ ifeq ($(CONFIG_FIRMWARE_INCLUDE_OPENVPN),y)
 endif
 
 ifeq ($(STORAGE_ENABLED),y)
-ifeq ($(CONFIG_FIRMWARE_INCLUDE_SMBD),y)
+ifneq (,$(filter y,$(CONFIG_FIRMWARE_INCLUDE_SMBD) $(CONFIG_FIRMWARE_INCLUDE_SMBD36)))
 	cd $(INSTALLDIR)/sbin && ln -sf rc run_samba
 	cd $(INSTALLDIR)/sbin && ln -sf rc stop_samba
 	cd $(INSTALLDIR)/sbin && ln -sf rc run_ftpsamba
@@ -152,7 +152,7 @@ endif
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_FTPD),y)
 	cd $(INSTALLDIR)/sbin && ln -sf rc run_ftp
 	cd $(INSTALLDIR)/sbin && ln -sf rc stop_ftp
-ifneq ($(CONFIG_FIRMWARE_INCLUDE_SMBD),y)
+ifeq (,$(filter y,$(CONFIG_FIRMWARE_INCLUDE_SMBD) $(CONFIG_FIRMWARE_INCLUDE_SMBD36)))
 	cd $(INSTALLDIR)/sbin && ln -sf rc run_ftpsamba
 	cd $(INSTALLDIR)/sbin && ln -sf rc stop_ftpsamba
 endif
