openssl: disable elliptic curves dependency because of 5488f5c3d6e30824bd3c6815c9ec5f38018881ec commit

--- a/trunk/libs/libssl/Makefile
+++ b/trunk/libs/libssl/Makefile
@@ -33,7 +33,7 @@ ifneq ($(CONFIG_FIRMWARE_INCLUDE_SSWAN),y)
 OPENSSL_CIPHERS += no-rc2
 endif
 
-ifeq (,$(filter y,$(CONFIG_FIRMWARE_INCLUDE_OPENSSL_EC) $(CONFIG_FIRMWARE_INCLUDE_TOR) $(CONFIG_FIRMWARE_INCLUDE_OPENSSH) $(CONFIG_FIRMWARE_INCLUDE_SFTP)))
+ifeq (,$(filter y,$(CONFIG_FIRMWARE_INCLUDE_OPENSSL_EC) $(CONFIG_FIRMWARE_INCLUDE_TOR)))
 OPENSSL_CIPHERS += no-ec
 endif
 
