www: update footer

--- a/trunk/user/www/Makefile
+++ b/trunk/user/www/Makefile
@@ -6,8 +6,8 @@ ROMFS_DIR = $(ROOTDIR)/romfs
 
 include $(ROOTDIR)/user/shared/boards.mk
 
-PROJECT_HOME_URL="https:\/\/bitbucket.org\/padavan\/rt-n56u\/"
-LABEL_COPYRIGHT_TEXT="© 2011-2016 Padavan \& N56U project community"
+PROJECT_HOME_URL="https:\/\/github.com\/Linaro1985\/padavan-ng\/"
+LABEL_COPYRIGHT_TEXT="© 2011-2018 Padavan \& N56U project community \& Linaro"
 
 BOARD_PATTERN=s/ZVMODELVZ/$(CONFIG_FIRMWARE_PRODUCT_ID)/g
 COPYR_PATTERN=s/ZVCOPYRVZ/$(LABEL_COPYRIGHT_TEXT)/g
