apps: size optimization by -fvisibility=hidden -fvisibility-inlines-hidden flags

--- a/trunk/user/802.1x/Makefile
+++ b/trunk/user/802.1x/Makefile
@@ -1,4 +1,4 @@
-CFLAGS  += -ffunction-sections -fdata-sections
+CFLAGS  += -ffunction-sections -fdata-sections -fvisibility=hidden
 LDFLAGS += -Wl,--gc-sections
 
 # If you want to support multiple radius server for multiple bssid, add following line
