--- a/trunk/user/igmpproxy/Makefile
+++ b/trunk/user/igmpproxy/Makefile
@@ -1,6 +1,6 @@
 SRC_NAME=igmpproxy-0.1
 
-CFLAGS += -ffunction-sections -fdata-sections
+CFLAGS += -ffunction-sections -fdata-sections -fvisibility=hidden
 LDFLAGS += -Wl,--gc-sections
 
 all: config_test
