--- a/trunk/user/iproute2/iproute2-3.4.0/Makefile
+++ b/trunk/user/iproute2/iproute2-3.4.0/Makefile
@@ -35,7 +35,7 @@ HOSTCC = gcc
 CFLAGS += -Wstrict-prototypes
 CFLAGS += -I../include
 CFLAGS += -D_GNU_SOURCE $(DEFINES)
-CFLAGS += -ffunction-sections -fdata-sections
+CFLAGS += -ffunction-sections -fdata-sections -fvisibility=hidden
 YACCFLAGS = -d -t -v
 
 SUBDIRS=lib tc
