--- a/trunk/user/ipset/Makefile
+++ b/trunk/user/ipset/Makefile
@@ -2,6 +2,8 @@ SRC_NAME=ipset-6.x
 
 THISDIR = $(shell pwd)
 
+CFLAGS += -fvisibility=hidden
+
 all: config_test
 	$(MAKE) -j$(HOST_NCPU) -C $(SRC_NAME)
 	$(MAKE) modules -j$(HOST_NCPU) -C $(SRC_NAME)
