--- a/trunk/user/lanauth/Makefile
+++ b/trunk/user/lanauth/Makefile
@@ -1,16 +1,15 @@
-CCFLAGS+=-Os -Wall -I. -ffunction-sections -fdata-sections $(CFLAGS)
+CFLAGS+=-Os -Wall -I. -ffunction-sections -fdata-sections -fvisibility=hidden
 LDFLAGS+=-s -Wl,--gc-sections
 LIBS=md5.o rmd160.o
 
 lanauth: lanauth.o $(LIBS)
-	$(CC) $(CCFLAGS) $(LDFLAGS) lanauth.o -o lanauth $(LIBS)
+	$(CC) $(CFLAGS) $(LDFLAGS) lanauth.o -o lanauth $(LIBS)
 
 %.o: %.c
-	$(CC) $(CCFLAGS) -c $<
+	$(CC) $(CFLAGS) -c $<
 
 clean:
 	rm -f *.o lanauth
 
 romfs:
-	$(STRIP) lanauth
-	$(ROMFSINST) /usr/sbin/lanauth
+	$(ROMFSINST) lanauth /usr/sbin/lanauth
