--- a/trunk/user/networkmap/Makefile
+++ b/trunk/user/networkmap/Makefile
@@ -4,7 +4,7 @@ SHDIR = $(ROOTDIR)/user/shared
 EXEC = networkmap
 OBJS = function.o networkmap.o
 
-CFLAGS  += -ffunction-sections -fdata-sections -Wall -I. -I$(SHDIR) -I$(SHDIR)/include
+CFLAGS  += -ffunction-sections -fdata-sections -fvisibility=hidden -Wall -I. -I$(SHDIR) -I$(SHDIR)/include
 CFLAGS  += -s -DNO_PARALLEL
 #CFLAGS  += -DDEBUG -DDEBUG_MORE
 
