--- a/trunk/user/p910nd/Makefile
+++ b/trunk/user/p910nd/Makefile
@@ -1,5 +1,7 @@
 # If you don't have it in /var/log/subsys, uncomment and define
 #CFLAGS += -DLOCKFILE_DIR=\"/var/log\"
+CFLAGS  += -ffunction-sections -fdata-sections -fvisibility=hidden
+LDFLAGS += -Wl,--gc-sections
 
 PROG = p910nd
 CONFIG = p910nd.conf
