--- a/trunk/user/udpxy/Makefile
+++ b/trunk/user/udpxy/Makefile
@@ -30,7 +30,7 @@ MKDEPOPT := -MM
 DEBUG_ON := -g
 
 ALL_CFLAGS  = -W -Wall -Werror --pedantic $(CFLAGS) -O2
-ALL_CFLAGS += -ffunction-sections -fdata-sections
+ALL_CFLAGS += -ffunction-sections -fdata-sections -fvisibility=hidden
 
 LDFLAGS += -Wl,--gc-sections
 
