--- a/trunk/user/uqmi/Makefile
+++ b/trunk/user/uqmi/Makefile
@@ -1,5 +1,5 @@
 CFLAGS  += -I. -Werror -Wmissing-declarations
-CFLAGS  += -ffunction-sections -fdata-sections
+CFLAGS  += -ffunction-sections -fdata-sections -fvisibility=hidden
 #CFLAGS += -DDEBUG_PACKET -DDEBUG -g3
 LDFLAGS += -Llibubox -lubox
 LDFLAGS += -Wl,--gc-sections
