--- a/trunk/user/xupnpd/Makefile
+++ b/trunk/user/xupnpd/Makefile
@@ -1,5 +1,8 @@
 SRC_NAME=src
 
+CFLAGS += -fvisibility=hidden
+CXXFLAGS += -fvisibility=hidden -fvisibility-inlines-hidden
+
 all:
 	make -j$(HOST_NCPU) -C $(SRC_NAME) embedded
 
