--- a/trunk/user/LPRng/Makefile
+++ b/trunk/user/LPRng/Makefile
@@ -63,6 +63,9 @@ FILES=./postinstall ./preremove ./postremove ./lpd.conf
 ALLDIRS= ${DIRS} ${SRC}/TESTSUPPORT ${SRC}/DOCS
 ROMFSDIR = $(ROOTDIR)/romfs
 
+CFLAGS  += -O2 -ffunction-sections -fdata-sections -fvisibility=hidden
+LDFLAGS += -Wl,--gc-sections
+
 ###############################################################################
 
 all: ${DIRS} ${FILES}
