--- a/trunk/user/dnsmasq/dnsmasq-2.8x/Makefile
+++ b/trunk/user/dnsmasq/dnsmasq-2.8x/Makefile
@@ -24,7 +24,7 @@ MANDIR        = $(PREFIX)/share/man
 LOCALEDIR     = $(PREFIX)/share/locale
 BUILDDIR      = $(SRC)
 DESTDIR       = 
-CFLAGS        = -Wall -W -O2 -ffunction-sections -fdata-sections
+CFLAGS        = -Wall -W -O2 -ffunction-sections -fdata-sections -fvisibility=hidden
 LDFLAGS       = -Wl,--gc-sections
 COPTS         = 
 RPM_OPT_FLAGS = 
