--- a/trunk/user/lldt/Makefile
+++ b/trunk/user/lldt/Makefile
@@ -6,7 +6,7 @@ SHDIR = $(ROOTDIR)/user/shared
 USERDIR = $(ROOTDIR)/user
 CFLAGS  += -I. -I$(SHDIR) -I$(SHDIR)/include
 CFLAGS  += $(if $(CONFIG_IPV6),-DUSE_IPV6,)
-CFLAGS  += -ffunction-sections -fdata-sections
+CFLAGS  += -ffunction-sections -fdata-sections -fvisibility=hidden
 
 LDFLAGS += -L$(SHDIR) -lshared
 LDFLAGS += -Wl,--gc-sections
