--- a/trunk/user/parted/Makefile
+++ b/trunk/user/parted/Makefile
@@ -1,6 +1,6 @@
 SRC_NAME=parted-3.X
 
-CFLAGS += -ffunction-sections -fdata-sections
+CFLAGS += -ffunction-sections -fdata-sections -fvisibility=hidden
 LDFLAGS += -Wl,--gc-sections
 
 all: config_test
