--- a/trunk/user/privoxy/Makefile
+++ b/trunk/user/privoxy/Makefile
@@ -1,6 +1,6 @@
 SRC_NAME=privoxy-3.0.26
 
-CFLAGS +=$(COPT) -ffunction-sections -fdata-sections
+CFLAGS +=$(COPT) -ffunction-sections -fdata-sections -fvisibility=hidden
 LDFLAGS += -Wl,--gc-sections
 
 all: config_test
