--- a/trunk/user/tor/Makefile
+++ b/trunk/user/tor/Makefile
@@ -1,6 +1,6 @@
 SRC_NAME=tor-0.3.X.X
 
-CFLAGS +=$(COPT) -ffunction-sections -fdata-sections
+CFLAGS +=$(COPT) -ffunction-sections -fdata-sections -fvisibility=hidden
 LDFLAGS += -Wl,--gc-sections
 
 all: config_test
