--- a/trunk/user/usb-modeswitch/Makefile
+++ b/trunk/user/usb-modeswitch/Makefile
@@ -2,7 +2,7 @@ PROG        = usb_modeswitch
 VERS        = 2.5.2
 CC          ?= gcc
 CFLAGS     += -I$(STAGEDIR)/include/libusb-1.0
-CFLAGS     += -Wall -ffunction-sections -fdata-sections
+CFLAGS     += -Wall -ffunction-sections -fdata-sections -fvisibility=hidden
 LDFLAGS    += -Wl,--gc-sections
 LIBS        = -lusb-1.0
 RM          = /bin/rm -f
