--- a/trunk/user/wsdd2/Makefile
+++ b/trunk/user/wsdd2/Makefile
@@ -2,6 +2,9 @@ ifndef ROOTDIR
 ROOTDIR=../..
 endif
 
+CFLAGS  += -ffunction-sections -fdata-sections -fvisibility=hidden
+LDFLAGS += -Wl,--gc-sections
+
 SHDIR		= $(ROOTDIR)/user/shared
 CFLAGS		+= -I$(SHDIR)
 LDFLAGS		+= -L$(SHDIR) -lshared
