--- a/trunk/user/adb/Makefile
+++ b/trunk/user/adb/Makefile
@@ -1,10 +1,8 @@
 TARGET=Linux
-COMMON_FLAGS = -ffunction-sections -fdata-sections -fvisibility=hidden
 CFLAGS += -I$(STAGEDIR)/include -L$(STAGEDIR)/lib
 CFLAGS += -D_GNU_SOURCE -DADB_HOST=1 -DHAVE_FORKEXEC=1 -DHAVE_OFF64_T=1
 CFLAGS += -Isrc -Iinclude
-CFLAGS += $(COMMON_FLAGS)
-CXXFLAGS += $(COMMON_FLAGS) -fvisibility-inlines-hidden
+CFLAGS += -ffunction-sections -fdata-sections -fvisibility=hidden
 LDFLAGS += -Wl,--gc-sections
 
 SRCS += src/adb.c \
@@ -21,7 +19,6 @@ SRCS += src/adb.c \
 	src/transport_local.c \
 	src/transport_usb.c \
 	src/usb_linux.c \
-	src/usb_vendors.c \
 	libcutils/load_file.c \
 	libcutils/socket_inaddr_any_server.c \
 	libcutils/socket_local_client.c \
