--- a/trunk/user/samba3/Makefile
+++ b/trunk/user/samba3/Makefile
@@ -4,9 +4,9 @@ SMBCFLAGS = -Wall -ffunction-sections -fdata-sections $(CFLAGS)
 SMBLDFLAGS = -Wl,--gc-sections $(LDFLAGS)
 
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_SMBD_SYSLOG),y)
-SMBCFLAGS += -O2 -DMAX_DEBUG_LEVEL="0"
+SMBCFLAGS += -DMAX_DEBUG_LEVEL="0"
 else
-SMBCFLAGS += -Os -DMAX_DEBUG_LEVEL="-1"
+SMBCFLAGS += -DMAX_DEBUG_LEVEL="-1"
 endif
 
 THISDIR = $(shell pwd)
