--- a/trunk/user/samba36/Makefile
+++ b/trunk/user/samba36/Makefile
@@ -6,9 +6,9 @@ SMBCPPFLAGS = $(CPPFLAGS) -DNDEBUG -DSHMEM_SIZE=524288 -Dfcntl=fcntl64 -D_FILE_O
 MAKE_FLAGS = $(MAKEFLAGS) DYNEXP= PICFLAG= MODULES=
 
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_SMBD_SYSLOG),y)
-SMBCFLAGS += -O2 -DMAX_DEBUG_LEVEL="0"
+SMBCFLAGS += -DMAX_DEBUG_LEVEL="0"
 else
-SMBCFLAGS += -Os -DMAX_DEBUG_LEVEL="-1"
+SMBCFLAGS += -DMAX_DEBUG_LEVEL="-1"
 endif
 
 all: config_test
