--- a/toolchain/samples/mipsel-linux-uclibc/crosstool.config
+++ b/toolchain/samples/mipsel-linux-uclibc/crosstool.config
@@ -30,6 +30,7 @@ CT_LIBC_UCLIBC_LIBICONV=y
 CT_LIBC_UCLIBC_IPV6=y
 CT_LIBC_UCLIBC_WCHAR=y
 # CT_LIBC_UCLIBC_HAS_SSP is not set
+CT_GCC_V_7_4_0=y
 CT_CC_GCC_CORE_EXTRA_CONFIG_ARRAY="--with-gnu-ld"
 CT_CC_GCC_EXTRA_CONFIG_ARRAY="--with-gnu-ld"
 CT_CC_GCC_CONFIG_TLS=y
