--- a/trunk/.config
+++ b/trunk/.config
@@ -1,33 +1,31 @@
 ### Target Vendor/Product (support only Ralink RT3883/MT7620/MT7621/MT7628)
-CONFIG_VENDOR=Ralink
-CONFIG_PRODUCT=RT3883
+CONFIG_VENDOR=NEWIFI
+CONFIG_PRODUCT=MT7621
 
 ### Target ProductID (board select, max 12 symbols)
-CONFIG_FIRMWARE_PRODUCT_ID="RT-N56U"
+CONFIG_FIRMWARE_PRODUCT_ID="NEWIFI-D2"
 
 ### Linux kernel and toolchain
 CONFIG_LINUXDIR=linux-3.4.x
-CONFIG_TOOLCHAIN_DIR=/opt/rt-n56u/toolchain-mipsel
+CONFIG_TOOLCHAIN_DIR=/tools/release/mipsel-linux-uclibc7
 
 ############################################################
 ### Linux kernel configuration
 ############################################################
 
-### Build ROOTFS_IN_RAM firmware mode (kernel+initramfs).
-### Decreased firmware size, but more RAM used, slow boot.
-### Also allow build image for load w/o flash from UART console
-#CONFIG_FIRMWARE_TYPE_ROOTFS_IN_RAM=y
+### Force MT7621 CPU clock to 900MHz (override Uboot settings)
+#CONFIG_FIRMWARE_CPU_900MHZ=y
 
-### Kernel driver select for WiFi AP 5GHz
-### 2.4 = RT3883/3662 v2.4.3.6
-### 2.7 = RT3883/3662 v2.7.2.0
-CONFIG_FIRMWARE_WIFI5_DRIVER=2.7
+### Enable MT7621 CPU sleep mode (downclock to 220MHz on idle)
+#CONFIG_FIRMWARE_CPU_SLEEP=y
 
 ### Kernel driver select for WiFi AP 2.4GHz
-### 2.4 = RT3092 v2.4.0.5
-### 2.5 = RT3092 v2.5.0.11
-### 2.7 = RT3092 v2.7.1.5
-CONFIG_FIRMWARE_WIFI2_DRIVER=2.7
+### 4.1 = MT7603E v4.1.0.0
+CONFIG_FIRMWARE_WIFI2_DRIVER=4.1
+
+### Kernel driver select for WiFi AP 5GHz
+### 3.0 = MT7612E v3.0.4.0
+CONFIG_FIRMWARE_WIFI5_DRIVER=3.0
 
 ### Enable IPv6 support
 CONFIG_FIRMWARE_ENABLE_IPV6=y
@@ -37,6 +35,7 @@ CONFIG_FIRMWARE_ENABLE_USB=y
 
 ### Enable NTFS filesystem support via Paragon "ufsd" driver. ~0.4MB
 CONFIG_FIRMWARE_ENABLE_UFSD=y
+
 
 ### Enable FAT/FAT32 filesystem support. ~0.1MB
 CONFIG_FIRMWARE_ENABLE_FAT=y
@@ -74,11 +73,20 @@ CONFIG_FIRMWARE_ENABLE_SWAP=y
 ### Include USB-Audio modules ~0.46MB
 #CONFIG_FIRMWARE_INCLUDE_AUDIO=y
 
+### Include XFRM (IPsec) modules & iptables extension ~ 0.2MB
+#CONFIG_FIRMWARE_INCLUDE_XFRM=y
+
 ### Include network QoS scheduling modules. ~0.2MB
-#CONFIG_FIRMWARE_INCLUDE_QOS=y
+CONFIG_FIRMWARE_INCLUDE_QOS=y
 
 ### Include IMQ module for shapers (a bit of performance degradation). ~0.02MB
 #CONFIG_FIRMWARE_INCLUDE_IMQ=y
+
+## Include adbyby adn koolproxy. ~1.5MB
+CONFIG_FIRMWARE_INCLUDE_ADBYBY=y
+
+### Include Xware. ~2.5MB
+#CONFIG_FIRMWARE_INCLUDE_XUNLEI=y
 
 ### Include IFB module for shapers. ~0.03MB
 #CONFIG_FIRMWARE_INCLUDE_IFB=y
@@ -87,31 +95,32 @@ CONFIG_FIRMWARE_ENABLE_SWAP=y
 CONFIG_FIRMWARE_INCLUDE_IPSET=y
 
 ### Include NFSv3 server. ~0.6MB
-CONFIG_FIRMWARE_INCLUDE_NFSD=y
+#CONFIG_FIRMWARE_INCLUDE_NFSD=y
 
 ### Include NFSv3 client. ~0.5MB
 #CONFIG_FIRMWARE_INCLUDE_NFSC=y
 
 ### Include CIFS (SMB) client. ~0.2MB
-#CONFIG_FIRMWARE_INCLUDE_CIFS=y
+CONFIG_FIRMWARE_INCLUDE_CIFS=y
 
 ############################################################
 ### Userspace configuration
 ############################################################
 
 ### Include WebUI international resources. Increased firmware size
-#CONFIG_FIRMWARE_INCLUDE_LANG_BR=y
-#CONFIG_FIRMWARE_INCLUDE_LANG_CZ=y
-#CONFIG_FIRMWARE_INCLUDE_LANG_DA=y
-#CONFIG_FIRMWARE_INCLUDE_LANG_DE=y
-#CONFIG_FIRMWARE_INCLUDE_LANG_ES=y
-#CONFIG_FIRMWARE_INCLUDE_LANG_FI=y
-#CONFIG_FIRMWARE_INCLUDE_LANG_FR=y
-#CONFIG_FIRMWARE_INCLUDE_LANG_NO=y
-#CONFIG_FIRMWARE_INCLUDE_LANG_PL=y
+CONFIG_FIRMWARE_INCLUDE_LANG_BR=y
+CONFIG_FIRMWARE_INCLUDE_LANG_CN=y
+CONFIG_FIRMWARE_INCLUDE_LANG_CZ=y
+CONFIG_FIRMWARE_INCLUDE_LANG_DA=y
+CONFIG_FIRMWARE_INCLUDE_LANG_DE=y
+CONFIG_FIRMWARE_INCLUDE_LANG_ES=y
+CONFIG_FIRMWARE_INCLUDE_LANG_FI=y
+CONFIG_FIRMWARE_INCLUDE_LANG_FR=y
+CONFIG_FIRMWARE_INCLUDE_LANG_NO=y
+CONFIG_FIRMWARE_INCLUDE_LANG_PL=y
 CONFIG_FIRMWARE_INCLUDE_LANG_RU=y
-#CONFIG_FIRMWARE_INCLUDE_LANG_SV=y
-#CONFIG_FIRMWARE_INCLUDE_LANG_UK=y
+CONFIG_FIRMWARE_INCLUDE_LANG_SV=y
+CONFIG_FIRMWARE_INCLUDE_LANG_UK=y
 
 ### Include NTFS-3G FUSE driver (instead of Paragon "ufsd"). ~0.4MB
 #CONFIG_FIRMWARE_INCLUDE_NTFS_3G=y
@@ -120,7 +129,7 @@ CONFIG_FIRMWARE_INCLUDE_LANG_RU=y
 CONFIG_FIRMWARE_INCLUDE_LPRD=y
 
 ### Include USB-over-Ethernet printer daemon. ~0.05MB
-CONFIG_FIRMWARE_INCLUDE_U2EC=y
+#CONFIG_FIRMWARE_INCLUDE_U2EC=y
 
 ### Include "tcpdump" utility. ~0.6MB
 #CONFIG_FIRMWARE_INCLUDE_TCPDUMP=y
@@ -138,13 +147,13 @@ CONFIG_FIRMWARE_INCLUDE_SMBD=y
 #CONFIG_FIRMWARE_INCLUDE_WINS=y
 
 ### Include syslog for SMB and WINS server. ~0.3MB
-#CONFIG_FIRMWARE_INCLUDE_SMBD_SYSLOG=y
+CONFIG_FIRMWARE_INCLUDE_SMBD_SYSLOG=y
 
 ### Include FTP server. ~0.2MB
 CONFIG_FIRMWARE_INCLUDE_FTPD=y
 
 ### Include alternative L2TP control client RP-L2TP. ~0.1MB
-#CONFIG_FIRMWARE_INCLUDE_RPL2TP=y
+CONFIG_FIRMWARE_INCLUDE_RPL2TP=y
 
 ### Include EAP-TTLS and EAP-PEAP authentication support. openssl ~1.2MB, wpa_supplicant +0.04MB
 CONFIG_FIRMWARE_INCLUDE_EAP_PEAP=y
@@ -170,8 +179,11 @@ CONFIG_FIRMWARE_INCLUDE_DROPBEAR_FAST_CODE=y
 ### Include OpenVPN. IPv6 required. openssl ~1.2MB, openvpn ~0.4MB
 CONFIG_FIRMWARE_INCLUDE_OPENVPN=y
 
+### Include StrongSwan. XFRM modules ~0.2MB, strongswan ~0.7MB
+#CONFIG_FIRMWARE_INCLUDE_SSWAN=y
+
 ### Include Elliptic Curves (EC) to openssl library. ~0.1MB
-#CONFIG_FIRMWARE_INCLUDE_OPENSSL_EC=y
+CONFIG_FIRMWARE_INCLUDE_OPENSSL_EC=y
 
 ### Include "openssl" executable for generate certificates. ~0.4MB
 CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y
@@ -189,14 +201,49 @@ CONFIG_FIRMWARE_INCLUDE_MINIDLNA=y
 #CONFIG_FIRMWARE_INCLUDE_FFMPEG_NEW=y
 
 ### Include Transmission torrent. openssl ~1.2MB, transmission ~1.5MB
-CONFIG_FIRMWARE_INCLUDE_TRANSMISSION=y
+#CONFIG_FIRMWARE_INCLUDE_TRANSMISSION=y
 
 ### Include Transmission-Web-Control (advanced WebUI). ~0.8MB
 #CONFIG_FIRMWARE_INCLUDE_TRANSMISSION_WEB_CONTROL=y
 
 ### Include Aria2 download manager. openssl ~1.2MB, aria2 ~3.5MB
-#CONFIG_FIRMWARE_INCLUDE_ARIA=y
+CONFIG_FIRMWARE_INCLUDE_ARIA=y
 
 ### Include Aria2 WEB control. ~0.7MB
-#CONFIG_FIRMWARE_INCLUDE_ARIA_WEB_CONTROL=y
+CONFIG_FIRMWARE_INCLUDE_ARIA_WEB_CONTROL=y
+
+## Include adbyby and koolproxy. ~1.5MB
+CONFIG_FIRMWARE_INCLUDE_ADBYBY=y
+
+### Include KMS. ~0.3MB
+CONFIG_FIRMWARE_INCLUDE_KMS=y
+
+### Include Ngrok. ~0.1MB
+CONFIG_FIRMWARE_INCLUDE_NGROK=y
+
+### Include Xware. ~2.5MB
+#CONFIG_FIRMWARE_INCLUDE_XUNLEI=y
+
+### free x/y/zmodem implementation. ~0.05MB
+CONFIG_FIRMWARE_INCLUDE_LRZSZ=y
+### Include TOR proxy ~2.3MB
+#CONFIG_FIRMWARE_INCLUDE_TOR=y
+
+### Include GeoIP database info for TOR proxy ~1.1MB
+#CONFIG_FIRMWARE_INCLUDE_TOR_GEOIP=y
+
+### Include IPv6 GeoIP database info for TOR proxy ~1.1MB
+#CONFIG_FIRMWARE_INCLUDE_TOR_GEOIPV6=y
+
+### Include Privoxy proxy ~0.3MB
+#CONFIG_FIRMWARE_INCLUDE_PRIVOXY=y
+
+### Include DNSCrypt proxy ~0.5MB
+#CONFIG_FIRMWARE_INCLUDE_DNSCRYPT=y
+
+### Include WPAD support
+#CONFIG_FIRMWARE_INCLUDE_WPAD=y
+
+### Include compressed memory support
+CONFIG_FIRMWARE_INCLUDE_ZRAM=y
 
